Convert POJOs to records (#250)
* chore: convert dtos to record

* Google Java Format

* # This is a combination of 2 commits.
# This is the 1st commit message:

chore: clean codes

# The commit message #2 will be skipped:

# chore: clean codes

* chore: clean codes

* Google Java Format

---------

Co-authored-by: github-actions <>